<resources>
    <string name="app_name">Genshin Guide</string>
    <string name="search_description">White magnifying glass</string>
    <string name="preference_file_key">edu.uw.jatn.genshinguide.pref</string>
    <string name="username">edu.jatn.genshinguide.name</string>
    <string name="password">edu.jatn.genshinguide.password</string>
    <string name="bio">edu.jatn.genshinguide.bio</string>
    <string name="image">edu.jatn.genshinguide.image</string>
    <string name="char_img_description">playable character from the game Genshin Impact</string>
    <string name="profile_fab_description">white filled outline of person</string>
    <string name="guide_fab_description">white filled outline of book</string>
    <string name="sign_in">Sign In</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="rating">Rating:</string>
    <string name="rarity">Rarity:</string>
    <string name="element">Element:</string>
    <string name="weapon">Weapon:</string>
    <string name="rec_role">Recommended Role:</string>
    <string name="registration">Registration Complete</string>
    <string name="return_to_login">Return to Login</string>
    <string name="guide">Genshin Impact Guide</string>
    <string name="search_hint">Search name (e.g. Amber)</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="profile_description">profile picture</string>
    <string name="name">name</string>
    <string name="bio_hint">Put Bio Here!</string>
    <string name="sign_out">Sign Out</string>
    <string name="register">Register</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="weapons">Weapons:</string>
    <string name="artifacts">Artifacts:</string>
    <string name="main_stats">Main Stats:</string>
    <string name="sub_stats">Sub Stats:</string>
    <string name="row_weapon">Weapon</string>
    <string name="row_rank">Rank</string>
    <string name="row_artifact">Artifact</string>
    <string name="stat_priority">Stat Priority</string>
    <string name="stat">Stat</string>
</resources>