<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <TextView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="35sp" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_below="@id/profile"
        android:layout_centerInParent="true"
        android:background="#ADD8E6"
        android:contentDescription="@string/profile_description"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_person_24" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/picture"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:gravity="center"
        android:hint="@string/bio_hint"
        android:textSize="20sp" />

    <Button
        android:id="@+id/signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:layout_centerInParent="true"
        android:text="@string/sign_out"
        android:textSize="25sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/guide_fab_description"
        app:backgroundTint="@color/brown"
        app:srcCompat="@drawable/ic_baseline_book_24"
        app:tint="@color/white" />
</RelativeLayout>