<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginBottom="10dp"
    android:background="@drawable/card"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="@color/blue"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/weapons"
            android:textSize="18sp" />

        <TableRow
            android:background="@color/brown"
            android:padding="10dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/row_rank"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row_weapon"
                android:textColor="@color/white" />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/weapon_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/artifacts"
            android:textSize="18sp" />

        <TableRow
            android:background="@color/brown"
            android:padding="10dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/row_rank"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row_artifact"
                android:textColor="@color/white" />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/artifact_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/main_stats"
            android:textSize="18sp" />

        <TableRow
            android:background="@color/brown"
            android:padding="10dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/row_artifact"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_priority"
                android:textColor="@color/white" />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_stat_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/sub_stats"
            android:textSize="18sp" />

        <TableRow
            android:background="@color/brown"
            android:padding="10dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/row_rank"
                android:textAlignment="center"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat"
                android:textColor="@color/white" />
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sub_stat_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </TableLayout>
</LinearLayout>