<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    tools:context=".GuideFragment">

    <TextView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/guide"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="8"
            android:background="@drawable/search_bar">

            <!-- ICON -->
            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/search_description"
                android:padding="8dp"
                android:src="@drawable/search" />

            <!-- INPUT -->
            <EditText
                android:id="@+id/char_input"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="-10dp"
                android:layout_toEndOf="@+id/search_icon"
                android:background="@null"
                android:hint="@string/search_hint"
                android:padding="5dp"
                android:text=""
                android:textColor="@color/white"
                android:textColorHint="@color/transparent_white"
                android:textSize="14sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:background="@drawable/search_btn"
            android:padding="1dp"
            android:text="@string/search"
            android:textSize="11sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>